--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-???
+```html
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>VG Base – Dummy Layout</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-slate-100 text-slate-900 antialiased">
+    <main class="mx-auto max-w-2xl p-6">
+      <h1 class="text-2xl font-bold mb-6">Case File Form</h1>
+
+      <form class="grid gap-4 bg-white p-6 rounded-xl shadow">
+        <label class="grid gap-1 text-sm">
+          <span>Customer Name</span>
+          <input type="text" class="border rounded-lg px-3 py-2" placeholder="Jane Doe" />
+        </label>
+
+        <label class="grid gap-1 text-sm">
+          <span>Address</span>
+          <input type="text" class="border rounded-lg px-3 py-2" placeholder="123 Main St, Springfield" />
+        </label>
+
+        <label class="grid gap-1 text-sm">
+          <span>Phone Number</span>
+          <input type="tel" class="border rounded-lg px-3 py-2" placeholder="(555) 123-4567" />
+        </label>
+
+        <label class="grid gap-1 text-sm">
+          <span>Case File #</span>
+          <input type="text" class="border rounded-lg px-3 py-2" placeholder="ABC123" />
+        </label>
+
+        <button type="submit" class="rounded-lg bg-indigo-600 px-4 py-2 text-white hover:bg-indigo-700">Save</button>
+      </form>
+    </main>
+  </body>
+</html>
