--- a/index.html
+++ b/index.html
@@ -4,36 +4,45 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>VG Base – Dummy Layout</title>
+    <title>VGBase 2.0</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-slate-100 text-slate-900 antialiased">
-    <main class="mx-auto max-w-2xl p-6">
-      <h1 class="text-2xl font-bold mb-6">Case File Form</h1>
+  <body class="bg-gradient-to-br from-teal-100 to-blue-200 text-slate-900 antialiased min-h-screen flex items-center justify-center">
+    <main class="w-full max-w-3xl p-8">
+      <!-- Title -->
+      <h1 class="text-4xl font-extrabold text-center mb-10 text-teal-700 drop-shadow">
+        VGBase <span class="text-blue-700">Version 2.0</span>
+      </h1>
 
-      <form class="grid gap-4 bg-white p-6 rounded-xl shadow">
+      <!-- Form Card -->
+      <form class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-white/90 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-teal-200">
         <label class="grid gap-1 text-sm">
-          <span>Customer Name</span>
-          <input type="text" class="border rounded-lg px-3 py-2" placeholder="Jane Doe" />
+          <span class="font-medium text-teal-800">Customer Name</span>
+          <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
         </label>
 
         <label class="grid gap-1 text-sm">
-          <span>Address</span>
-          <input type="text" class="border rounded-lg px-3 py-2" placeholder="123 Main St, Springfield" />
+          <span class="font-medium text-teal-800">Address</span>
+          <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
         </label>
 
         <label class="grid gap-1 text-sm">
-          <span>Phone Number</span>
-          <input type="tel" class="border rounded-lg px-3 py-2" placeholder="(555) 123-4567" />
+          <span class="font-medium text-teal-800">Phone Number</span>
+          <input type="tel" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
         </label>
 
         <label class="grid gap-1 text-sm">
-          <span>Case File #</span>
-          <input type="text" class="border rounded-lg px-3 py-2" placeholder="ABC123" />
+          <span class="font-medium text-teal-800">Case File #</span>
+          <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ABC123" />
         </label>
 
-        <button type="submit" class="rounded-lg bg-indigo-600 px-4 py-2 text-white hover:bg-indigo-700">Save</button>
+        <div class="md:col-span-2 flex justify-center mt-4">
+          <button type="submit" class="rounded-xl bg-gradient-to-r from-teal-500 to-blue-600 px-6 py-3 text-white font-semibold shadow hover:from-teal-600 hover:to-blue-700 transition">
+            Save Case File
+          </button>
+        </div>
       </form>
     </main>
   </body>
 </html>
+```
