--- a/index.html
+++ b/index.html
@@ -8,41 +8,193 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gradient-to-br from-teal-100 to-blue-200 text-slate-900 antialiased min-h-screen flex items-center justify-center">
-    <main class="w-full max-w-3xl p-8">
+    <main class="w-full max-w-4xl p-8">
       <!-- Title -->
       <h1 class="text-4xl font-extrabold text-center mb-10 text-teal-700 drop-shadow">
         VGBase <span class="text-blue-700">Version 2.0</span>
       </h1>
 
       <!-- Form Card -->
-      <form class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-white/90 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-teal-200">
-        <label class="grid gap-1 text-sm">
-          <span class="font-medium text-teal-800">Customer Name</span>
-          <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
-        </label>
+      <section class="bg-white/90 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-teal-200">
+        <h2 class="text-xl font-semibold text-teal-800 mb-6">Customer / Case Details</h2>
 
-        <label class="grid gap-1 text-sm">
-          <span class="font-medium text-teal-800">Address</span>
-          <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
-        </label>
+        <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <!-- Left column -->
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Customer Name</span>
+            <input id="customer_name" type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
+          </label>
 
-        <label class="grid gap-1 text-sm">
-          <span class="font-medium text-teal-800">Phone Number</span>
-          <input type="tel" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
-        </label>
+          <!-- Right column -->
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Address</span>
+            <input id="address" type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
+          </label>
 
-        <label class="grid gap-1 text-sm">
-          <span class="font-medium text-teal-800">Case File #</span>
-          <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ABC123" />
-        </label>
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Phone Number</span>
+            <input id="phone" type="tel" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
+          </label>
 
-        <div class="md:col-span-2 flex justify-center mt-4">
-          <button type="submit" class="rounded-xl bg-gradient-to-r from-teal-500 to-blue-600 px-6 py-3 text-white font-semibold shadow hover:from-teal-600 hover:to-blue-700 transition">
-            Save Case File
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Case File #</span>
+            <input id="case_number" type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ABC123" />
+          </label>
+
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">DOL (Date)</span>
+            <input id="dol" type="date" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" />
+          </label>
+
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Incident Type</span>
+            <select id="incident_type" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none">
+              <option value="">Select…</option>
+              <option>Theft</option>
+              <option>Accident</option>
+              <option>Civil</option>
+              <option>Criminal</option>
+              <option>Other</option>
+            </select>
+          </label>
+
+          <div class="md:col-span-2 flex justify-center pt-2">
+            <button type="button" class="rounded-xl bg-gradient-to-r from-teal-500 to-blue-600 px-6 py-3 text-white font-semibold shadow hover:from-teal-600 hover:to-blue-700 transition">
+              Save Case File
+            </button>
+          </div>
+        </form>
+      </section>
+
+      <!-- Criteria Builder -->
+      <section class="mt-8 bg-white/90 backdrop-blur-sm p-6 rounded-2xl shadow border border-teal-200">
+        <div class="flex items-center justify-between gap-4 mb-4">
+          <h2 class="text-lg font-semibold text-teal-800">Search Criteria Builder</h2>
+          <p class="text-sm text-slate-600">Toggle fields and drag to reorder priority.</p>
+        </div>
+
+        <!-- Chips container -->
+        <div id="criteria" class="flex flex-wrap gap-3">
+          <!-- Chips are draggable and togglable -->
+          <button class="criteria-chip" data-field="customer_name" draggable="true">
+            <span class="icon" aria-hidden="true"></span>
+            Customer Name
+          </button>
+          <button class="criteria-chip" data-field="address" draggable="true">
+            <span class="icon" aria-hidden="true"></span>
+            Address
+          </button>
+          <button class="criteria-chip" data-field="phone" draggable="true">
+            <span class="icon" aria-hidden="true"></span>
+            Phone Number
+          </button>
+          <button class="criteria-chip" data-field="case_number" draggable="true">
+            <span class="icon" aria-hidden="true"></span>
+            Case File #
+          </button>
+          <button class="criteria-chip" data-field="dol" draggable="true">
+            <span class="icon" aria-hidden="true"></span>
+            DOL
+          </button>
+          <button class="criteria-chip" data-field="incident_type" draggable="true">
+            <span class="icon" aria-hidden="true"></span>
+            Incident Type
           </button>
         </div>
-      </form>
+
+        <!-- Live selection preview -->
+        <div class="mt-5 border-t pt-4">
+          <h3 class="font-medium text-slate-800">Active Criteria</h3>
+          <p id="activeCriteria" class="text-sm text-slate-600 mt-1">None selected.</p>
+        </div>
+      </section>
     </main>
+
+    <script>
+      // --- Criteria chip behavior (toggle + drag reorder)
+      const container = document.getElementById('criteria');
+      const activeOut = document.getElementById('activeCriteria');
+
+      function updateActive() {
+        const active = Array.from(container.querySelectorAll('.criteria-chip[data-selected="true"]'))
+          .map(chip => chip.dataset.field.replace(/_/g, ' '))
+          .join(', ');
+        activeOut.textContent = active ? active : 'None selected.';
+      }
+
+      function styleChip(chip, selected) {
+        if (selected) {
+          chip.setAttribute('data-selected', 'true');
+          chip.className = 'criteria-chip selected';
+          chip.querySelector('.icon').innerHTML = checkIcon(true);
+        } else {
+          chip.removeAttribute('data-selected');
+          chip.className = 'criteria-chip';
+          chip.querySelector('.icon').innerHTML = checkIcon(false);
+        }
+      }
+
+      function checkIcon(on) {
+        // Tailwind-colored check when selected; outline when not
+        return on
+          ? '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4"><path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd"/></svg>'
+          : '<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4"><rect x="3" y="3" width="18" height="18" rx="4"/></svg>';
+      }
+
+      // Initialize chip visuals
+      container.querySelectorAll('.criteria-chip').forEach(chip => {
+        styleChip(chip, false);
+        chip.addEventListener('click', (e) => {
+          // Ignore click if we're in drag
+          if (chip.classList.contains('dragging')) return;
+          const on = chip.getAttribute('data-selected') !== 'true';
+          styleChip(chip, on);
+          updateActive();
+        });
+
+        // Drag & drop reordering
+        chip.addEventListener('dragstart', () => {
+          chip.classList.add('dragging');
+        });
+        chip.addEventListener('dragend', () => {
+          chip.classList.remove('dragging');
+        });
+      });
+
+      container.addEventListener('dragover', (e) => {
+        e.preventDefault();
+        const dragging = container.querySelector('.dragging');
+        const after = getDragAfterElement(container, e.clientX, e.clientY);
+        if (!after) {
+          container.appendChild(dragging);
+        } else {
+          container.insertBefore(dragging, after);
+        }
+      });
+
+      function getDragAfterElement(container, x, y) {
+        const els = [...container.querySelectorAll('.criteria-chip:not(.dragging)')];
+        return els.reduce((closest, child) => {
+          const box = child.getBoundingClientRect();
+          const offset = Math.hypot(x - (box.left + box.width/2), y - (box.top + box.height/2));
+          if (offset < closest.offset) {
+            return { offset, element: child };
+          } else {
+            return closest;
+          }
+        }, { offset: Number.POSITIVE_INFINITY, element: null }).element;
+      }
+
+      updateActive();
+    </script>
+
+    <style>
+      /* Pill chip styling using Tailwind classes via @apply */
+      .criteria-chip { @apply select-none inline-flex items-center gap-2 px-3 py-2 rounded-xl border border-teal-300 bg-white text-sm text-teal-800 shadow-sm hover:bg-teal-50 transition; }
+      .criteria-chip.selected { @apply bg-teal-600 text-white border-teal-600 hover:bg-teal-700; }
+      .criteria-chip.dragging { @apply opacity-60 ring-2 ring-blue-400; }
+      .criteria-chip .icon { @apply inline-flex; }
+    </style>
   </body>
 </html>
 ```
