--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gradient-to-br from-teal-100 to-blue-200 text-slate-900 antialiased min-h-screen flex items-center justify-center">
-    <main class="w-full max-w-4xl p-8">
+    <main class="w-full max-w-5xl p-8">
       <!-- Title -->
-      <h1 class="text-4xl font-extrabold text-center mb-10 text-teal-700 drop-shadow">
+      <h1 class="text-4xl font-extrabold text-center mb-2 text-teal-700 drop-shadow">
         VGBase <span class="text-blue-700">Version 2.0</span>
       </h1>
+      <p class="text-center text-slate-700 mb-10 font-medium">
+        Client Lookup and Conflict Resolution Check
+      </p>
 
 ```
   <!-- Form Card -->
@@ -22,32 +25,40 @@
     <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Customer Name</span>
-        <input id="customer_name" type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
+        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
       </label>
 
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Address</span>
-        <input id="address" type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
+        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
       </label>
 
-      <label class="grid gap-1 text-sm">
+      <div class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Phone Number</span>
-        <input id="phone" type="tel" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
-      </label>
+        <div class="flex gap-2 items-center">
+          <input type="tel" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
+          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data">
+            <!-- checkmark icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+              <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </div>
 
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Case File #</span>
-        <input id="case_number" type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ABC123" />
+        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ABC123" />
       </label>
 
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">DOL (Date)</span>
-        <input id="dol" type="date" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" />
+        <input type="date" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" />
       </label>
 
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Incident Type</span>
-        <select id="incident_type" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none">
+        <select class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none">
           <option value="">Select…</option>
           <option>Theft</option>
           <option>Accident</option>
@@ -56,12 +67,6 @@
           <option>Other</option>
         </select>
       </label>
-
-      <div class="md:col-span-2 flex justify-center pt-2">
-        <button type="button" class="rounded-xl bg-gradient-to-r from-teal-500 to-blue-600 px-6 py-3 text-white font-semibold shadow hover:from-teal-600 hover:to-blue-700 transition">
-          Save Case File
-        </button>
-      </div>
     </form>
   </section>
 
@@ -105,78 +110,6 @@
     </div>
   </section>
 </main>
-
-<script>
-  const container = document.getElementById('criteria');
-  const activeOut = document.getElementById('activeCriteria');
-
-  function updateActive() {
-    const active = Array.from(container.querySelectorAll('.criteria-chip[data-selected="true"]'))
-      .map(chip => chip.dataset.field.replace(/_/g, ' '))
-      .join(', ');
-    activeOut.textContent = active ? active : 'None selected.';
-  }
-
-  function styleChip(chip, selected) {
-    if (selected) {
-      chip.setAttribute('data-selected', 'true');
-      chip.className = 'criteria-chip selected';
-      chip.querySelector('.icon').innerHTML = checkIcon(true);
-    } else {
-      chip.removeAttribute('data-selected');
-      chip.className = 'criteria-chip';
-      chip.querySelector('.icon').innerHTML = checkIcon(false);
-    }
-  }
-
-  function checkIcon(on) {
-    return on
-      ? '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4"><path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd"/></svg>'
-      : '<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-4 h-4"><rect x="3" y="3" width="18" height="18" rx="4"/></svg>';
-  }
-
-  container.querySelectorAll('.criteria-chip').forEach(chip => {
-    styleChip(chip, false);
-    chip.addEventListener('click', (e) => {
-      if (chip.classList.contains('dragging')) return;
-      const on = chip.getAttribute('data-selected') !== 'true';
-      styleChip(chip, on);
-      updateActive();
-    });
-    chip.addEventListener('dragstart', () => {
-      chip.classList.add('dragging');
-    });
-    chip.addEventListener('dragend', () => {
-      chip.classList.remove('dragging');
-    });
-  });
-
-  container.addEventListener('dragover', (e) => {
-    e.preventDefault();
-    const dragging = container.querySelector('.dragging');
-    const after = getDragAfterElement(container, e.clientX, e.clientY);
-    if (!after) {
-      container.appendChild(dragging);
-    } else {
-      container.insertBefore(dragging, after);
-    }
-  });
-
-  function getDragAfterElement(container, x, y) {
-    const els = [...container.querySelectorAll('.criteria-chip:not(.dragging)')];
-    return els.reduce((closest, child) => {
-      const box = child.getBoundingClientRect();
-      const offset = Math.hypot(x - (box.left + box.width/2), y - (box.top + box.height/2));
-      if (offset < closest.offset) {
-        return { offset, element: child };
-      } else {
-        return closest;
-      }
-    }, { offset: Number.POSITIVE_INFINITY, element: null }).element;
-  }
-
-  updateActive();
-</script>
 
 <style>
   .criteria-chip { @apply select-none inline-flex items-center gap-2 px-3 py-2 rounded-xl border border-teal-300 bg-white text-sm text-teal-800 shadow-sm hover:bg-teal-50 transition; }
