--- a/index.html
+++ b/index.html
@@ -7,38 +7,44 @@
     <title>VGBase 2.0</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gradient-to-br from-teal-100 to-blue-200 text-slate-900 antialiased min-h-screen flex items-center justify-center">
-    <main class="w-full max-w-5xl p-8">
-      <!-- Title -->
-      <h1 class="text-4xl font-extrabold text-center mb-2 text-teal-700 drop-shadow">
-        VGBase <span class="text-blue-700">Version 2.0</span>
-      </h1>
-      <p class="text-center text-slate-700 mb-10 font-medium">
-        Client Lookup and Conflict Resolution Check
-      </p>
+  <body class="bg-gradient-to-br from-teal-100 to-blue-200 text-slate-900 antialiased min-h-screen">
+    <!-- Top bar with login/profile -->
+    <header class="flex justify-end p-4">
+      <div class="relative group text-sm text-slate-700">
+        <div class="flex flex-col items-center cursor-pointer">
+          <div class="w-10 h-10 rounded-full bg-teal-600 text-white flex items-center justify-center font-bold">
+            D
+          </div>
+          <span class="mt-1">Don</span>
+        </div>
+        <!-- Hover/Click dropdown -->
+        <div class="absolute right-0 mt-2 hidden group-hover:block bg-white border border-slate-200 rounded-lg shadow px-4 py-2">
+          <button class="text-red-600 hover:text-red-700">Log out</button>
+        </div>
+      </div>
+    </header>
 
 ```
+<main class="w-full max-w-5xl mx-auto p-8">
+  <!-- Title -->
+  <h1 class="text-4xl font-extrabold text-center mb-2 text-teal-700 drop-shadow">
+    VGBase <span class="text-blue-700">Version 2.0</span>
+  </h1>
+  <p class="text-center text-slate-700 mb-10 font-medium">
+    Client Lookup and Conflict Resolution Check
+  </p>
+
   <!-- Form Card -->
   <section class="bg-white/90 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-teal-200">
     <h2 class="text-xl font-semibold text-teal-800 mb-6">Customer / Case Details</h2>
 
     <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Customer Name</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
-      </label>
-
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Address</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
-      </label>
-
+      <!-- Customer Name with search -->
       <div class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Phone Number</span>
+        <span class="font-medium text-teal-800">Customer Name</span>
         <div class="flex gap-2 items-center">
-          <input type="tel" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
+          <input type="text" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
           <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data">
-            <!-- checkmark icon -->
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
             </svg>
@@ -46,16 +52,45 @@
         </div>
       </div>
 
+      <!-- Address -->
+      <label class="grid gap-1 text-sm">
+        <span class="font-medium text-teal-800">Address</span>
+        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
+      </label>
+
+      <!-- Phone with search -->
+      <div class="grid gap-1 text-sm">
+        <span class="font-medium text-teal-800">Phone Number</span>
+        <div class="flex gap-2 items-center">
+          <input type="tel" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
+          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+              <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </div>
+
+      <!-- Case # -->
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Case File #</span>
         <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ABC123" />
       </label>
 
-      <label class="grid gap-1 text-sm">
+      <!-- DOL with search -->
+      <div class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">DOL (Date)</span>
-        <input type="date" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" />
-      </label>
+        <div class="flex gap-2 items-center">
+          <input type="date" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" />
+          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+              <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </div>
 
+      <!-- Incident Type -->
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Incident Type</span>
         <select class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none">
@@ -69,54 +104,7 @@
       </label>
     </form>
   </section>
-
-  <!-- Criteria Builder -->
-  <section class="mt-8 bg-white/90 backdrop-blur-sm p-6 rounded-2xl shadow border border-teal-200">
-    <div class="flex items-center justify-between gap-4 mb-4">
-      <h2 class="text-lg font-semibold text-teal-800">Search Criteria Builder</h2>
-      <p class="text-sm text-slate-600">Toggle fields and drag to reorder priority.</p>
-    </div>
-
-    <div id="criteria" class="flex flex-wrap gap-3">
-      <button class="criteria-chip" data-field="customer_name" draggable="true">
-        <span class="icon" aria-hidden="true"></span>
-        Customer Name
-      </button>
-      <button class="criteria-chip" data-field="address" draggable="true">
-        <span class="icon" aria-hidden="true"></span>
-        Address
-      </button>
-      <button class="criteria-chip" data-field="phone" draggable="true">
-        <span class="icon" aria-hidden="true"></span>
-        Phone Number
-      </button>
-      <button class="criteria-chip" data-field="case_number" draggable="true">
-        <span class="icon" aria-hidden="true"></span>
-        Case File #
-      </button>
-      <button class="criteria-chip" data-field="dol" draggable="true">
-        <span class="icon" aria-hidden="true"></span>
-        DOL
-      </button>
-      <button class="criteria-chip" data-field="incident_type" draggable="true">
-        <span class="icon" aria-hidden="true"></span>
-        Incident Type
-      </button>
-    </div>
-
-    <div class="mt-5 border-t pt-4">
-      <h3 class="font-medium text-slate-800">Active Criteria</h3>
-      <p id="activeCriteria" class="text-sm text-slate-600 mt-1">None selected.</p>
-    </div>
-  </section>
 </main>
-
-<style>
-  .criteria-chip { @apply select-none inline-flex items-center gap-2 px-3 py-2 rounded-xl border border-teal-300 bg-white text-sm text-teal-800 shadow-sm hover:bg-teal-50 transition; }
-  .criteria-chip.selected { @apply bg-teal-600 text-white border-teal-600 hover:bg-teal-700; }
-  .criteria-chip.dragging { @apply opacity-60 ring-2 ring-blue-400; }
-  .criteria-chip .icon { @apply inline-flex; }
-</style>
 ```
 
   </body>
