--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         </select>
       </label>
 
-      <!-- Internal Case Number -->
+      <!-- Job Folder -->
       <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Internal Case Number</span>
+        <span class="font-medium text-teal-800">Job Folder</span>
         <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ICN-98765" />
       </label>
 
