--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
       </div>
     </header>
 
-    <main class="w-full max-w-5xl mx-auto px-4 py-10">
+    <main class="w-full max-w-5xl mx-auto px-4 py-8">
+      <!-- Role boxes row -->
+      <div class="flex items-center justify-center gap-4 mb-6">
+        <div class="border border-slate-200 rounded-md px-4 py-2 text-center text-sm font-medium text-slate-700 hover:bg-slate-50 hover:border-slate-300 cursor-pointer shadow-sm">
+          Admin
+        </div>
+        <div class="border border-slate-200 rounded-md px-4 py-2 text-center text-sm font-medium text-slate-700 hover:bg-slate-50 hover:border-slate-300 cursor-pointer shadow-sm">
+          Entry
+        </div>
+        <div class="border border-slate-200 rounded-md px-4 py-2 text-center text-sm font-medium text-slate-700 hover:bg-slate-50 hover:border-slate-300 cursor-pointer shadow-sm">
+          User
+        </div>
+      </div>
+
       <!-- Title -->
       <section class="mb-8">
         <h1 class="text-3xl md:text-4xl font-bold text-slate-800 text-center">
